fix: block ref should be able to wrap

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -129,10 +129,6 @@
   border-bottom-color: var(--ls-block-ref-link-text-color);
   cursor: alias;
 
-  &-wrap {
-    display: inline-block;
-  }
-
   &:hover {
     color: var(--ls-link-text-hover-color)
   }
